<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">GithUp</string>

    <string name="action_settings">Settings</string>
    <string name="change_language_settings">Change Language Settings</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search githup</string>

    <string name="following">following</string>
    <string name="followers">followers</string>
    <string name="repository">repositories</string>
    <string name="action_share">Share</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>